--- a/bio.html
+++ b/bio.html
@@ -35,17 +35,23 @@ $(document).ready(function(){
 </script>
 </head>
 <body>
-<header>
-  <div class="title">
+<header id="main">
+  <div class="title" id="Joram">
     <h1>Joram Palma</h1>
-    <a href="#section2" style="text-decoration: none;"><p>Scroll for more!</p></a>
+    <a href="#me" style="text-decoration: none;"><p>Scroll for more!</p></a>
   </div>
 </header>
-  <div class="main" id="section2">
-    <section>
-      <img src="this/img/joram.JPG">
-    </section>
-  </div>
+<section class="section" id="me">
+  <img src="this/img/joram.JPG" alt="Joram Palma" title="Joram Palma" id="Joram-Palma">
+    <div class="about-me">
+      <p>
+        Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam.
+      </p>
+    </div>
+    <div style="text-align: center; margin: 0px;">
+        <a href="#main"><img src="this/img/up_arrow.png" id="up-arrow"></a>
+    </div>
+</section>
 </body>
 </html>
 
